fixed the header alignment.

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -19,7 +19,7 @@
 
 header {
 	color: #fff;
-	padding: 30px 0;
+	padding: 5px 0;
 	background: $brand-color; /* Old browsers */
 	background: linear-gradient(to bottom, $brand-color 0%, $middle-gradient-color 100%) no-repeat $brand-color;
 
@@ -38,7 +38,7 @@ header {
 	.company-name {
 		font-size: 1.7em;
 		font-weight: bold;
-		line-height: 0;
+		// line-height: 0;
 
 
 		a {
