--- a/_sass/navigation.scss
+++ b/_sass/navigation.scss
@@ -16,15 +16,11 @@
 }
 
 nav {
-	// font-size: 1.2em;
 	width: 100%;
 	font-weight: bold;
 	margin: 0;
   position: relative;
-  // top: 50%;
-  // left: 50%;
-  // -ms-transform: translate(-50%, -50%);
-  // transform: translate(-50%, -50%);
+  top: 20%;
 
 	@media #{$mid-point} {
 		text-align: right;
@@ -51,7 +47,7 @@ nav {
 		&.nav-toggle {
 			display: inline;
 			position: relative;
-			// top: 50%;
+			top: -35px;
 		  left: 90%;
 			font-size: 1.9em;
 			border: 0;
